# DapperDolphins_Engine0

./: .gitignore  Applesauce.txt  CMakeLists.txt  CODEOWNERS  GavinsVeryCoolFile.txt  Git_Tutorial.txt  NatsFile.txt  README.md  TestCode.cpp  dolphin.aseprite  styleGuide.txt
.github/workflows/: blank.yml  c-cpp.yml
DolphinEngine_1/DolphinEngine/: DolphinEngine.sln
DolphinEngine_1/DolphinEngine/Debug/: DolphinEngine.ilk
DolphinEngine_1/DolphinEngine/DolphinEngine/: Actor.cpp  Actor.h  Camera.cpp  Camera.h  CommonValues.h  DirectionalLight.cpp  DirectionalLight.h  DolphinEngine.vcxproj  DolphinEngine.vcxproj.filters  Engine.cpp  Engine.h  Environment.h  Graphics.h  Interface.h  Level.cpp  Level.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  ObjectManager.h  OmniShadowMap.cpp  OmniShadowMap.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h  SpotLight.cpp  SpotLight.h  Texture.cpp  (+8 more)
Engine_0/: Actor.cpp  Actor.h  Cmp.h  Engine.cpp  Engine.h  Engine_0.sln  Engine_0.vcxproj  Engine_0.vcxproj.filters  Environment.h  Interface.h  Level.cpp  Level.h  Object.h  ObjectManager.cpp  ObjectManager.h  Transform.h  main.cpp  main.h
Engine_0/Debug/: vc142.idb
Engine_0/Debug/Engine_0.tlog/: CL.command.1.tlog  Engine_0.lastbuildstate
Engine_0/x64/Debug/: vc142.idb
Window StartTest/: GLwindow.cpp  GLwindow.h
docs/: CMakeLists.txt  Dolpin 1_1 Tree.aseprite  EngineModules.txt  EngineTree.aseprite  Git_Tutorial.txt  TestCode.cpp  brainstorm.txt
(+21 files in other folders)
